--- a/src/main/resources/templates/search/searchAllList.html
+++ b/src/main/resources/templates/search/searchAllList.html
@@ -76,7 +76,7 @@
 
 </th:block>
 <th:block layout:fragment="title">
-    <title>Board List</title>
+    <title>YU Total List</title>
 </th:block>
 
 <th:block layout:fragment="nav-title">
