--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -36,7 +36,7 @@
       				</li>
       				<li th:unless="${studentInfo} == null">
             			<form class="form-signin" style="margin:auto;">
-              				<img src="images/증명사진.jpg" style="width:25%;">
+              				
               				<div style="color: white">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               				<button class="btn btn-sm btn-block btn-outline-light" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
               				<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
@@ -71,7 +71,7 @@
           			</button>
     			</form>
             	<form th:unless="${studentInfo} == null" class="form-signin" style="margin:auto;">
-              		<img src="images/증명사진.jpg" style="width:25%;">
+              		
               		<div style="color:black">[[${studentInfo.getNickname()}]] 님 환영합니다!!!</div>
               		<button class="btn btn-sm btn-block btn-outline-dark" type="button" onclick="location.href='/yu/studentInfo/studentInfo'">내정보</button>
               		<button class="btn btn-sm btn-block btn-danger" type="button" onclick="location.href='/yu/logout'">로그아웃</button>
@@ -89,10 +89,10 @@
             		매칭
           			</a>
           		<div id="demo" class="collapse">
-            		<a href="#">청소</a><br>
-            		<a href="#">배달</a><br>
-            		<a href="#">역할대행</a><br>
-            		<a href="#">심부름</a>
+            		<a href="/yu/matching/matchingList?boardtype=청소">청소</a><br>
+            		<a href="/yu/matching/matchingList?boardtype=배달">배달</a><br>
+            		<a href="/yu/matching/matchingList?boardtype=역할대행">역할대행</a><br>
+            		<a href="/yu/matching/matchingList?boardtype=심부름">심부름</a>
           		</div>
         		</li>
 
