--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -1,6 +1,103 @@
 <!DOCTYPE html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
+<th:block layout:fragment="title">
+    <title>YU Matching List</title>
+</th:block>
+
+<th:block layout:fragment="article">
+	<div id="article">
+      <div class="container-fluid">
+        <div class="col-sm-auto article-header">
+          <h2 style="color:red" th:text=${boardtype}></h2>
+        </div>
+        <table class="col-sm-auto table table-hover" style="margin:0">
+          <thead>
+        	<tr>
+            	<th style="text-align:center">번호</th>
+            	<th style="text-align:center">제목</th>
+            	<th style="text-align:center">금액</th>
+            	<th style="text-align:center">작성자</th>
+           	 	<th style="text-align:center">등록일</th>
+            	<th style="text-align:center">해결여부</th>
+            	<th style="text-align:center">조회수</th>
+        	</tr>
+          </thead>
+        <tbody id="tbody">
+        <tr th:each="matching :${matchingList}">
+            <td style="width:5%; text-align:center" th:text="${matching.getBno()}"></td>
+            <td style="width:40%;"> <a th:href="@{'/yu/matching/matchingView/'+${matching.getBno()}}" th:text="${matching.getTitle()}"></a></td>
+            <td style="width:5%; text-align:center" th:text="${matching.getMoney()}"></td>
+            <td style="width:15%; text-align:center" th:text="${matching.getRequest_nickname()}"></td>
+            <td style="width:15%; text-align:center" th:text="${matching.getRegister_date()}"></td>
+            <td style="width:5%; text-align:center" th:if="${matching.getCheck_success()} == F">NO</td>
+            <td style="width:5%; text-align:center" th:if="${matching.getCheck_success()} == I">진행중</td>
+            <td style="width:5%; text-align:center" th:if="${matching.getCheck_success()} == T">YES</td>
+            <td style="width:5%; text-align:center" th:text="${matching.getRead_count()}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <hr style="margin:0"/><br>
+    <a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="InsertMatchingBoard()" role="button">글쓰기</a>
+
+	<nav aria-label="Page navigation">
+    <ul class="pagination justify-content-center">
+       <li id="pagefirst">
+			<a th:href="'?boardtype=' + ${boardtype} + '&page=0'">
+				<span class="page-link">«</span>
+			</a>
+		</li>
+       <li style="cursor:pointer" id="pagePrev" class="page-item disabled">
+			<a th:onClick="|return pageMove('prev');|">
+				<span class="page-link">&lt;</span>
+			</a>
+		</li>
+		<li class="page-item" style="cursor:pointer" th:if="${matchingList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,matchingList.getTotalPages()-1)}">
+			<a class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
+		</li>
+		<li id="pageNext">
+			<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
+				<span class="page-link">&gt;</span>
+			</a>
+		</li>
+        <li>
+			<a th:if="${matchingList.getTotalPages()}>0" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${matchingList.getTotalPages()-1}">
+				<span class="page-link">»</span>
+			</a>
+			<a th:if="${matchingList.getTotalPages()}==0" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${matchingList.getTotalPages()}">
+				<span class="page-link">»</span>
+            </a>
+        </li>
+    </ul>
+    </nav>
+    
+           <div class="search-wrap clear">
+              <!-- 옵션 -->
+              <div class="search-option-wrap fl">
+                <select id="searchDate" class="search-date">
+                  <option value="all">전체기간</option>
+                  <option value="1week">1주</option>
+                  <option value="1month">1개월</option>
+                  <option value="6month">6개월</option>
+                </select>
+                <select id="searchOption" class="search-option">
+                  <option value="all">제목+내용</option>
+                  <option value="title">제목</option>
+                  <option value="writer">글작성자</option>
+                  <option value="commentContent">댓글내용</option>
+                </select>
+              </div>
+              <!-- 검색어 입력창 -->
+              <div class="search-input-wrap fl">
+                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요">
+              </div>
+              <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchMatching()" class="button-image"></button>
+          </div>
+      </div>
+    </div>
+    <!-- /.card-content -->
+</th:block>
+
 <th:block layout:fragment="script">
     <script th:inline="javascript">
         function getParameterByName(name) {
@@ -15,97 +112,66 @@
             pages = 0;
         }
         $("#page"+pages).attr("class","active");
-        var boardtype=getParameterByName("boardtype");
+        var boardtype = [[${boardtype}]];
         
         function InsertMatchingBoard() {
             location.href = "/yu/matching/matchingInsert?boardtype=" +boardtype;
         }
+        
+        function pageMove(param) {
+            var pageNum = parseInt(getParameterByName("page"));
+            var nextOrPrev;
+            if(isNaN(pageNum)) pageNum = 0;
+            nextOrPrev = (param == "next") ? 1 : -1;
+
+            if(pageNum + nextOrPrev < 0) return false;
+            else if(pageNum + nextOrPrev > [[${matchingList.getTotalPages()}]] - 1) return false;
+
+            location.href = "/yu/matching/matchingList?boardtype=" + boardtype + "&page=" + (pageNum + nextOrPrev);
+            return true;
+        }
+        
+        function searchTotalList() {
+        	var text = $("#totalSearchBox");
+        	var date = $("#totalSearchDate option:selected");
+        	var option = $("#totalSearchOption option:selected");
+        	
+        	if(text.val().trim() == "") {
+        		alert("검색어를 입력하세요");
+        		return false;
+        	}
+        	else if(text.val().length < 2) {
+        		alert("검색어는 2글자 이상이어야 합니다");
+        		return false;
+        	}
+        	
+        	var chgText = text.val().replace(/%/gi, '%25');
+        	chgText = chgText.replace(/\\/gi, '%5C');
+        	
+        	location.href = "/yu/search/searchAllList?text=" + 
+        			chgText + "&date=" + date.val() + "&option=" + option.val();
+        }
+        
+        function searchMatching() {
+        	var text = $("#searchBox");
+        	var date = $("#searchDate option:selected");
+        	var option = $("#searchOption option:selected");
+        	
+        	if(text.val().trim() == "") {
+        		alert("검색어를 입력하세요");
+        		return false;
+        	}
+        	else if(text.val().length < 2) {
+        		alert("검색어는 2글자 이상이어야 합니다");
+        		return false;
+        	}
+
+        	var chgText = text.val().replace(/%/gi, '%25');
+        	chgText = chgText.replace(/\\/gi, '%5C');
+
+        	location.href = "/yu/search/searchMatchingList?boardtype=" + boardtype + "&text=" + 
+        			chgText + "&date=" + date.val() + "&option=" + option.val();
+        }
     </script>
-
-</th:block>
-<th:block layout:fragment="title">
-    <title>Matching List</title>
-</th:block>
-
-<th:block layout:fragment="nav-title">
-    <div class="fixed-navbar">
-        <div class="pull-left">
-            <h1 class="page-title">Matching List</h1>
-        </div>
-    </div>
-</th:block>
-
-<th:block layout:fragment="content">
-    <div id="grid">
-        <div id="menubar">
-            <ul class="nav flex-column">
-                <li class="dropdown dropright">
-                    <a class="nav-link" href="#" id="navbarDroprightMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" tabindex="-1" aria-disabled="true">
-                    	 매칭게시판
-                    </a>
-                    <div class="dropdown-menu text-center">
-                        <a class="dropdown-item" href="/yu/matching/matchingList?boardtype=심부름">심부름</a><br>
-                        <a class="dropdown-item" href="/yu/matching/matchingList?boardtype=역할대행">역할대행</a><br>
-                        <a class="dropdown-item" href="/yu/matching/matchingList?boardtype=멘토맨티">멘토멘티</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-        <br>
-    </div>
-    <div><h2 style="color:Blue">Matching list</h2></div>
-    <br><br>
-
-    <table class="table table-horizontal table-bordered">
-        <thead class="thead-strong">
-        <tr>
-            <th>게시글번호</th>
-            <th>제목</th>
-            <th>금액</th>
-            <th>작성자</th>
-            <th>등록일</th>
-            <th>해결여부</th>
-            <th>조회수</th>
-        </tr>
-        </thead>
-        <tbody id="tbody">
-        <tr th:each="matching :${matchingList}">
-            <td th:text="${matching.getBno()}"></td>
-            <td> <a th:href="@{'/matching/matchingView/'+${matching.getBno()}}" th:text="${matching.getTitle()}"></a></td>
-            <td th:text="${matching.getMoney()}"></td>
-            <td th:text="${matching.getRequest_nickname()}"></td>
-            <td th:text="${matching.getRegister_date()}"></td>
-            <td th:if="${matching.getCheck_success()} == F">NO</td>
-            <td th:if="${matching.getCheck_success()} == I">진행중</td>
-            <td th:if="${matching.getCheck_success()} == T">YES</td>
-            <td th:text="${matching.getRead_count()}"></td>
-        </tr>
-        </tbody>
-    </table>
-
-    <ul class="pagination">
-        <li id="pagefirst">
-            <a th:href="'?'+page+'='+0+'&'+boardtype+'='+${boardType}">
-                <span>«</span>
-            </a>
-        </li>
-        <li th:if="${matchingList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,matchingList.getTotalPages()-1)}">
-            <a th:href="'?'+page+'='+${num}+'&'+boardtype+'='+${boardType}" th:text="${num+1}"></a>
-        </li>
-        <li>
-            <a th:if="${matchingList.getTotalPages()}>0" th:href="'?'+page+'='+${matchingList.getTotalPages()-1}+'&'+boardtype+'='+${boardType}">
-                <span>»</span>
-            </a>
-            <a th:if="${matchingList.getTotalPages()}==0" th:href="'?'+page+'='+${matchingList.getTotalPages()}+'&'+boardtype+'='+${boardType}">
-                <span>»</span>
-            </a>
-        </li>
-    </ul>
-
-    <div style="float: right">
-        <button type="button" onClick="location.href='/studentInfo/studentInfo'" class="btn btn-primary waves-effect waves-light">학생 정보</button>
-        <button th:if="${userSid} != null" type="button" onClick="InsertMatchingBoard()" class="btn btn-primary waves-effect waves-light">등록</button>
-    </div>
-    <!-- /.card-content -->
 </th:block>
 </html>
