--- a/src/main/resources/templates/search/searchMatchingList.html
+++ b/src/main/resources/templates/search/searchMatchingList.html
@@ -2,43 +2,46 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="title">
-	<title>YU Board List</title>
+    <title>YU Matching List</title>
 </th:block>
 
 <th:block layout:fragment="article">
-    <div id="article">
+	<div id="article">
       <div class="container-fluid">
         <div class="col-sm-auto article-header">
           <h2 style="color:red" th:text=${boardtype}></h2>
         </div>
-        <table class="col-sm-auto table table-hover">
+        <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
-            <tr>
-              <th style="text-align:center">번호</th>
-              <th style="text-align:center">제목</th>
-              <th style="text-align:center">글쓴이</th>
-              <th style="text-align:center">작성일</th>
-              <th style="text-align:center">조회수</th>
-              <th style="text-align:center">좋아요</th>
-            </tr>
+        	<tr>
+            	<th style="text-align:center">번호</th>
+            	<th style="text-align:center">제목</th>
+            	<th style="text-align:center">금액</th>
+            	<th style="text-align:center">작성자</th>
+           	 	<th style="text-align:center">등록일</th>
+            	<th style="text-align:center">해결여부</th>
+            	<th style="text-align:center">조회수</th>
+        	</tr>
           </thead>
-		<tbody id="tbody">
-        <tr th:each="boardlist :${board}">
-            <td style="width:5%; text-align:center" th:text="${boardlist.getBno()}"></td>
-            <td> <a th:href="@{'/yu/board/boardView/'+${boardlist.getBno()}}" th:text="${boardlist.getTitle()}"></a></td>
-            <td style="width:20%; text-align:center" th:text="${boardlist.getNickname()}"></td>
-            <td style="width:15%; text-align:center" th:text="${boardlist.getRegister_date()}"></td>
-            <td style="width:5%; text-align:center" th:text="${boardlist.getRead_count()}"></td>
-            <td style="width:5%; text-align:center" th:text="${boardlist.getLike_count()}"></td>
+        <tbody id="tbody">
+        <tr th:each="matching :${matchingList}">
+            <td style="width:5%; text-align:center" th:text="${matching.getBno()}"></td>
+            <td style="width:40%;"> <a th:href="@{'/yu/matching/matchingView/'+${matching.getBno()}}" th:text="${matching.getTitle()}"></a></td>
+            <td style="width:5%; text-align:center" th:text="${matching.getMoney()}"></td>
+            <td style="width:15%; text-align:center" th:text="${matching.getRequest_nickname()}"></td>
+            <td style="width:15%; text-align:center" th:text="${matching.getRegister_date()}"></td>
+            <td style="width:5%; text-align:center" th:if="${matching.getCheck_success()} == F">NO</td>
+            <td style="width:5%; text-align:center" th:if="${matching.getCheck_success()} == I">진행중</td>
+            <td style="width:5%; text-align:center" th:if="${matching.getCheck_success()} == T">YES</td>
+            <td style="width:5%; text-align:center" th:text="${matching.getRead_count()}"></td>
         </tr>
         </tbody>
-        </table>
-        <hr />
-        <a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="insertBoard()" role="button">글쓰기</a>
+    </table>
+    <hr style="margin:0"/><br>
+    <a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="InsertMatchingBoard()" role="button">글쓰기</a>
 
-
-        <nav aria-label="Page navigation">
-          <ul class="pagination justify-content-center">
+	<nav aria-label="Page navigation">
+    	<ul class="pagination justify-content-center">
             <li id="pagefirst">
             	<a th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=0'">
 					<span class="page-link">«</span>
@@ -49,7 +52,7 @@
 					<span class="page-link">&lt;</span>
 				</a>
 			</li>
-			<li class="page-item" style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
+			<li class="page-item" style="cursor:pointer" th:if="${matchingList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0, matchingList.getTotalPages()-1)}">
 				<a class="page-link" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${num}" th:text="${num+1}"></a>
 			</li>
 			<li id="pageNext">
@@ -58,17 +61,17 @@
 				</a>
 			</li>
 			<li>
-            	<a th:if="${board.getTotalPages()}>0" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${board.getTotalPages()-1}">
-                	<span class="page-link">»</span>
+            	<a th:if="${matchingList.getTotalPages()}>0" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${matchingList.getTotalPages()-1}">
+                	<span>»</span>
             	</a>
-            	<a th:if="${board.getTotalPages()}==0" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${board.getTotalPages()}">
+            	<a th:if="${matchingList.getTotalPages()}==0" th:href="'?boardtype=' + ${boardtype} + '&text=' + ${text}  + '&date=' + ${date} + '&option=' + ${option} + '&page=' + ${matchingList.getTotalPages()}">
 					<span class="page-link">»</span>
 				</a>
 			</li>
-          </ul>
-        </nav>
-
-          	<div class="search-wrap clear">
+    	</ul>
+    </nav>
+    
+           <div class="search-wrap clear">
               <!-- 옵션 -->
               <div class="search-option-wrap fl">
                 <select id="searchDate" class="search-date">
@@ -86,20 +89,21 @@
               </div>
               <!-- 검색어 입력창 -->
               <div class="search-input-wrap fl">
-                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchBoard()}" placeholder="검색어를 입력해 주세요">
+                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchMatching()}" placeholder="검색어를 입력해 주세요">
               </div>
-              <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchBoard()" class="button-image"></button>
-            </div>
+              <button class="btn glass"><img th:src="@{/images/돋보기.png}" onClick="return searchMatching()" class="button-image"></button>
+          </div>
       </div>
     </div>
+    <!-- /.card-content -->
 </th:block>
 
 <th:block layout:fragment="script">
     <script>
-        var pages = getParameterByName("page");
-        var boardtype = "[[${boardtype}]]";
-        
-    	if([[${board.getTotalElements()}]] == 0) {
+    	var pages = getParameterByName("page");
+    	var boardtype = "[[${boardtype}]]";
+    	
+    	if([[${matchingList.getTotalElements()}]] == 0) {
     		var tr = document.createElement("tr");
     		var th = document.createElement("th");
     		
@@ -114,9 +118,9 @@
         $("#searchBox").focus();
         $("#searchDate").val("[[${date}]]").prop("selected", true);
         $("#searchOption").val("[[${option}]]").prop("selected", true);
-        
+
         if(pages == "") {
-            pages=0;
+            pages = 0;
         }
         $("#page"+pages).attr("class","active");
         
@@ -127,6 +131,10 @@
             return results == null ? "" : decodeURIComponent(results[1].replace(/\+/g, " "));
         }
         
+        function InsertMatchingBoard() {
+            location.href = "/yu/matching/matchingInsert?boardtype=" +boardtype;
+        }
+        
         function pageMove(param) {
             var pageNum = parseInt(getParameterByName("page"));
             var nextOrPrev;
@@ -134,18 +142,14 @@
             nextOrPrev = (param == "next") ? 1 : -1;
 
             if(pageNum + nextOrPrev < 0) return false;
-            else if(pageNum + nextOrPrev > [[${board.getTotalPages()}]] - 1) return false;
+            else if(pageNum + nextOrPrev > [[${matchingList.getTotalPages()}]] - 1) return false;
 
-            location.href = "/yu/search/searchBoardList?boardtype=" + [[${boardtype}]] + "&text=" + [[${text}]] + "&date=" 
-            		+ [[${date}]] + "&option=" + [[${option}]] + "&page=" + (pageNum + nextOrPrev);
-            return true;
+            location.href = "/yu/search/searchMatchingList?boardtype=" + [[${boardtype}]] + "&text=" + [[${text}]] + "&date=" 
+    			+ [[${date}]] + "&option=" + [[${option}]] + "&page=" + (pageNum + nextOrPrev);
+    		return true;
         }
         
-        function insertBoard() {
-            location.href = "/yu/board/boardInsert?boardtype=" + boardtype;
-        }
-        
-        function searchTotalBoard() {
+        function searchTotalList() {
         	var text = $("#totalSearchBox");
         	var date = $("#totalSearchDate option:selected");
         	var option = $("#totalSearchOption option:selected");
@@ -166,7 +170,7 @@
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
         
-        function searchBoard() {
+        function searchMatching() {
         	var text = $("#searchBox");
         	var date = $("#searchDate option:selected");
         	var option = $("#searchOption option:selected");
@@ -179,11 +183,11 @@
         		alert("검색어는 2글자 이상이어야 합니다");
         		return false;
         	}
-        	
+
         	var chgText = text.val().replace(/%/gi, '%25');
         	chgText = chgText.replace(/\\/gi, '%5C');
-        	
-        	location.href = "/yu/search/searchBoardList?boardtype=" + boardtype + "&text=" + 
+
+        	location.href = "/yu/search/searchMatchingList?boardtype=" + boardtype + "&text=" + 
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
     </script>
