--- a/src/main/resources/templates/studentInfo/studentMyCommentList.html
+++ b/src/main/resources/templates/studentInfo/studentMyCommentList.html
@@ -11,7 +11,7 @@
         <div class="col-sm-auto article-header">
           <h2 style="color:green">내가 쓴 댓글 (전체)</h2>
         </div>
-        <table class="col-sm-auto table table-hover">
+        <table class="col-sm-auto table table-hover" style="margin:0">
           <thead>
             <tr>
               <th style="text-align:center">제목</th>
@@ -27,7 +27,7 @@
           </tr>
         </tbody>
         </table>
-        <hr/>
+        <hr style="margin:0"/>
 
         <nav aria-label="Page navigation">
           <ul class="pagination justify-content-center">
