--- a/src/main/resources/templates/search/searchAllList.html
+++ b/src/main/resources/templates/search/searchAllList.html
@@ -2,7 +2,7 @@
 <html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layout/basic}">
 
 <th:block layout:fragment="script">
-    <script th:inline="javascript">
+    <script>
         var pages = getParameterByName("page");
         var boardtype=getParameterByName("boardtype");
         
