--- a/src/main/resources/templates/board/boardList.html
+++ b/src/main/resources/templates/board/boardList.html
@@ -37,9 +37,17 @@
         </tbody>
         </table>
         <hr style="margin:0"/><br>
-        <a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="insertBoard()" role="button">글쓰기</a>
-
-
+        
+        <div class="clear">
+        	<div class="float-right">
+        		Total <b style="color:red">[[${board.getTotalPages()}]]</b> Pages / <b style="color:red">[[${board.getTotalElements()}]]</b> Elements
+        	</div>
+			<div class="float-left">
+				<a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="insertBoard()" role="button">글쓰기</a>
+			</div>
+        </div>
+      
+      <div>
         <nav aria-label="Page navigation">
           <ul class="pagination justify-content-center">
             <li id="pagefirst">
@@ -53,7 +61,8 @@
 				</a>
 			</li>
 			<li class="page-item" style="cursor:pointer" th:if="${board.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,board.getTotalPages()-1)}">
-				<a class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
+				<a th:if="${board.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
+				<a th:unless="${board.getNumber()} == ${num}" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
 			</li>
 			<li id="pageNext">
 				<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
@@ -70,6 +79,7 @@
 			</li>
           </ul>
         </nav>
+       </div>
         
            <div class="search-wrap clear">
               <!-- 옵션 -->
