--- a/src/main/resources/templates/matching/matchingList.html
+++ b/src/main/resources/templates/matching/matchingList.html
@@ -38,7 +38,15 @@
         </tbody>
     </table>
     <hr style="margin:0"/><br>
-    <a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="InsertMatchingBoard()" role="button">글쓰기</a>
+    
+        <div class="clear">
+        	<div class="float-right">
+        		Total <b style="color:red">[[${matchingList.getTotalPages()}]]</b> Pages / <b style="color:red">[[${matchingList.getTotalElements()}]]</b> Elements
+        	</div>
+			<div class="float-left">
+				<a class="btn btn-primary" th:if="${studentInfo} != null" type="button" onClick="insertMatchingBoard()" role="button">글쓰기</a>
+			</div>
+        </div>
 
 	<nav aria-label="Page navigation">
     <ul class="pagination justify-content-center">
@@ -53,7 +61,8 @@
 			</a>
 		</li>
 		<li class="page-item" style="cursor:pointer" th:if="${matchingList.getTotalPages()}>0" th:id="page+${num}" th:each="num: ${#numbers.sequence(0,matchingList.getTotalPages()-1)}">
-			<a class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
+			<a th:if="${matchingList.getNumber()} == ${num}" style="color:red; font-weight:bold;" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
+			<a th:unless="${matchingList.getNumber()} == ${num}" class="page-link" th:href="'?boardtype=' + ${boardtype} + '&page=' + ${num}" th:text="${num+1}"></a>
 		</li>
 		<li id="pageNext">
 			<a style="cursor:pointer" th:onClick="|return pageMove('next');|">
@@ -114,7 +123,7 @@
         $("#page"+pages).attr("class","active");
         var boardtype = "[[${boardtype}]]";
         
-        function InsertMatchingBoard() {
+        function insertMatchingBoard() {
             location.href = "/yu/matching/matchingInsert?boardtype=" +boardtype;
         }
         
